--- a/TestApplicationIos.xcodeproj/xcshareddata/xcschemes/TestApplicationIos.xcscheme
+++ b/TestApplicationIos.xcodeproj/xcshareddata/xcschemes/TestApplicationIos.xcscheme
@@ -33,21 +33,16 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "FBFF9FCF228D354F00199EFA"
-               BuildableName = "TestApplicationIosFakeTests.xctest"
-               BlueprintName = "TestApplicationIosFakeTests"
+               BlueprintIdentifier = "FBF1950A22968D6700636970"
+               BuildableName = "TestApplicationIosTests.xctest"
+               BlueprintName = "TestApplicationIosTests"
                ReferencedContainer = "container:TestApplicationIos.xcodeproj">
             </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "FB88F7A4228EDC4C000F44E8"
-               BuildableName = "TestApplicationIosMockTests.xctest"
-               BlueprintName = "TestApplicationIosMockTests"
-               ReferencedContainer = "container:TestApplicationIos.xcodeproj">
-            </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "Test">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
